style: fix overflow

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ main {
   justify-content: center;
   width: 100%;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 /* Game Section Styles */
